2006-08-28  Adam Fedor  <fedor@gnu.org>

	* Version 1.13.0

2006-08-24  Adam Fedor  <fedor@gnu.org>

	* common.make: Remove 'd' suffix for debug libraries.
	* which_lib.c: Don't search for debug libraries in case there are
	old ones still around.

	* Documentation/news.texi: Update for new release.

2006-08-21  Adam Fedor  <fedor@gnu.org>

	* target.make: Add dragonfly OS.
	* Documentation/machine.texi: Updates.

2006-07-29 10:51-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* configure: Changed "cp -p" to "cp -rp" to correct breakage
	when the file being linked is a directory.

2006-07-06  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Prevent bad characters in paths
	* configure: regenerate
	* GNUstep.csh.in: remove use of obsolete substitutions
	* GNUstep.sh.in: ditto
	* GNUstep.conf.in: ditto
	The use of backslash or space characters in a path/filename can
	confuse make and shell scripts, so we check for them and prevent
	them from being specified at configure time and/or built in to
	scripts.  Hopefully this will prevent much confusion on windows.

2006-07-05  Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile.in: install config.make in library combo specific
	directory so that non-flattened builds can pick up the correct
	config info for the library combo being used.
	* common.make: pick up config.make from new location
	* rules.make: know about new location for config.make

2006-06-14  Richard Frith-Macdonald <rfm@gnu.org>

	* common.make: determine host/target info before trying to load
	host/target specific configuration.

2006-05-01  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Change --with... options specifying paths so that if
	someone oddly uses --without... we treat it as if they had specified
	nothing.

2006-04-26  Adam Fedor  <fedor@gnu.org>

	* Documentation/gnustep-howto.texi: Fix node link

2006-04-26  Saso Kiselkov

	* common.make: Add option to turn on native exceptions.

2006-04-25  Adam Fedor  <fedor@gnu.org>